[package]
name = "bellperson"
authors = [
  "dignifiedquire <me@dignifiedquire.com>",
  "Sean Bowe <ewillbefull@gmail.com>",
]
description = "zk-SNARK library"
documentation = "https://docs.rs/bellperson"
homepage = "https://github.com/filecoin-project/bellman"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/bellman"
version = "0.21.0"
readme = "README.md"
edition = "2018"

[dependencies]
bincode = "1.3.1"
bitvec = "0.22"
blake2s_simd = "0.5"
blstrs = "0.4.0"
byteorder = "1"
crossbeam-channel = "0.5.0"
digest = "0.9.0"
ff = "0.11.0"
group = "0.11.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.8"
memmap = "0.7.0"
num_cpus = "1"
pairing = "0.21"
rand = "0.8"
rand_core = "0.6"
rayon = "1.5.0"
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.9"
thiserror = "1.0.10"
yastl = "0.1.2"

# cuda/opencl feature
ec-gpu = {version = "0.1.0", optional = true}
ec-gpu-gen = {version = "0.1.0", optional = true}
fs2 = {version = "0.4.3", optional = true}
rust-gpu-tools = {version = "0.5.0", optional = true, default-features = false}

[dev-dependencies]
criterion = "0.3.2"
csv = "1.1.5"
env_logger = "0.9.0"
hex-literal = "0.3"
rand_chacha = "0.3"
rand_xorshift = "0.3"
subtle = "2.2.1"
tempfile = "3.1.0"

[build-dependencies]
# bindgen = "0.56.0"
blstrs = "0.4.0"
# cc = "1.0"
ec-gpu = {version = "0.1.0", optional = true}
ec-gpu-gen = {version = "0.1.0", optional = true}
execute = "0.2.9"
hex = "0.4"
sha2 = "0.9"

[features]
cuda = ["rust-gpu-tools/cuda", "ec-gpu", "ec-gpu-gen", "fs2", "blstrs/gpu"]
default = ["groth16"]
groth16 = []
opencl = ["rust-gpu-tools/opencl", "ec-gpu", "ec-gpu-gen", "fs2", "blstrs/gpu"]

# This feature disables/modifies long running tests to make the suitable for code coverage
# reporting
_coverage = []

[[test]]
name = "mimc"
path = "tests/mimc.rs"
required-features = ["groth16"]

[[test]]
name = "groth16_aggregation"
path = "tests/groth16_aggregation.rs"
required-features = ["groth16"]

[badges]
maintenance = {status = "actively-developed"}

[[bench]]
harness = false
name = "lc"

[workspace]
members = [
  "verifier-bench",
]
