
[package]
name = "verifier-bench"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
bellperson = { path = "../" }
ff = "0.12.0"
group = "0.12.0"
structopt = { version = "0.3", default-features = false }
pretty_env_logger = "0.4.0"
rand = "0.8"
sha2 = "0.9"
bincode = "1.3.1"
pairing = "0.22"
blstrs = "0.5.0"
ec-gpu = { version = "0.1.0" }
ec-gpu-gen = { version = "0.3.0", default-features = false, features = [
    "fft",
    "multiexp",
] }
memmap = { version = "0.7.0", optional = true }
fs2 = { version = "0.4.3", optional = true }
getrandom = { version = "0.2.5", optional = true }
[features]
default = ["groth16", "memmap"]
cuda = ["ec-gpu-gen/cuda", "fs2", "blstrs/gpu"]
opencl = ["ec-gpu-gen/opencl", "fs2", "blstrs/gpu"]
groth16 = []
# Wasm friendly build. Disable default features for this.
wasm = ["getrandom/js", "groth16"]
